--- a/app/src/main/res/layout/activity_click.xml
+++ b/app/src/main/res/layout/activity_click.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@android:color/holo_blue_bright"
+    tools:context=".Click_Activity">
 
     <Button
-        android:id="@+id/btn_SendNotification"
-        android:text="Send Notification"
+        android:id="@+id/Click"
+        android:text="Click"
+        android:onClick="Back_MainActivity"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
 </RelativeLayout>
